--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.77.2",
     "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
@@ -19,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
