--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
+    "react-scroll": "^1.9.3",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.10",
     "uuid": "^11.1.0",
     "yup": "^1.6.1"
   },
